# c-CMAC

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: Findlibgcrypt.cmake
doc/: cmac_algorithm.txt  notes.txt
include/: AesCmac.h  AesCmacSubkeys.h  BitOperation.h  CmacAes.h
libAes128/: Aes128.c  Aes128.h  Aes128_Libgcrypt.c  CMakeLists.txt
mocks/: Aes.cpp  Aes.h  Aes128Comparator.cpp  Aes128Comparator.h  Aes128Copier.cpp  Aes128Copier.h  Aes128CreateParamsComparator.cpp  Aes128CreateParamsComparator.h  Aes128CryptoParamsComparator.cpp  Aes128CryptoParamsComparator.h  Aes128HandleComparator.cpp  Aes128HandleComparator.h  CMakeLists.txt  MockAes128.cpp  MockAes128.h  Mock_Aes128.cpp  Mock_Aes128.h  Mock_Libgcrypt.cpp  gcrypt.h
src/: AesCmac.c  AesCmacSubkeys.c  AesCmacSubkeys.h  BitOperation.c  BitOperation.h  CMakeLists.txt  CmacAes.c  CmacAesOps.c  CmacAesOps.h  CmacAesSubkeys.c  CmacAesSubkeys.h  CmacOps.c  CmacOps.h
tests/: CMakeLists.txt  TestList_AesCmacSubkeys.txt  TestList_BitOperation.txt  TestList_CircularLeftShiftOne.txt  Test_AesCmac.cpp  Test_AesCmacSubkeys.cpp  Test_ApplyCbcMac.cpp  Test_BitOperation.cpp  Test_CalculateNBlocks.cpp  Test_CircularShiftLeftOne.cpp  Test_LogicalShiftLeftOne.cpp  Test_Xor.cpp
tests/Aes128Libgcrypt/: CMakeLists.txt  TestList_Aes128Libgcrypt.txt  Test_Aes128Libgcrypt.cpp
tests/AesLibgcrypt/: CMakeLists.txt  TestList_AesLibgcrypt.txt  Test_AesLibgcrypt.cpp  Test_AesLibgcrypt2.cpp
tests/ByteArrayOps/: CMakeLists.txt  TestList_LogicalShiftLeftOne.txt  TestList_Xor.txt  Test_Xor.cpp
tests/Cmac/: CMakeLists.txt  RunAllTests.cpp  TestList_Cmac.txt  Test_AesCmac.cpp  Test_CmacAes.cpp
tests/CmacOps/: AllTests.cpp  CMakeLists.txt  RunAllTests.cpp  TestList_GetNthBlock.txt  Test_AesCmacSubkeys.cpp  Test_ApplyCbcAes.cpp  Test_ApplyCbcMac.cpp  Test_ApplyCbcXor.cpp  Test_CalculateIsCompleteBlock.cpp  Test_CalculateNBlocks.cpp  Test_CmacAesSubkeyOps.cpp  Test_CmacAesSubkeys.cpp  Test_CopyCmacOutput.cpp  Test_GenerateSubkeys.cpp  Test_GetBlockByNumber.cpp  Test_GetIsCompleteBlock.cpp  Test_GetNBlocks.cpp  Test_GetNthBlock.cpp  Test_Initialize.cpp  Test_InitializeCipherOutputBlock.cpp  Test_IsBlockRemaining.cpp  Test_SetIsCompleteBlock.cpp  Test_SetLastBlock.cpp  Test_SetLastBlockComplete.cpp  Test_SetLastBlockIncomplete.cpp  Test_SetNBlocks.cpp  Test_SubkeyOps.cpp  Test_Uninitialize.cpp
tests/Libgcrypt/: CMakeLists.txt  Libgcrypt_TestHelper.h  TestApp_Libgcrypt.c  TestList_Libgcrypt_AesEncrypt.txt  Test_Libgcrypt.cpp  Test_Libgcrypt_AesCipherHandle.cpp  Test_Libgcrypt_AesEncrypt.cpp  Test_Libgcrypt_CreateCipherHandle.cpp  Test_Libgcrypt_Init.cpp
tests/mocks/: CMakeLists.txt  TestList_Aes128HandleCopier.txt  Test_Aes128Comparator.cpp  Test_Aes128Copier.cpp  Test_Aes128CreateParamsComparator.cpp  Test_Aes128CryptoParamsComparator.cpp  Test_Aes128HandleComparator.cpp  Test_Aes128HandleCopier.cpp
